# radio_connection

./: .gitattributes  .gitignore  CMakeLists.txt  README_STAGE3.md  README_STAGE4.md  ROADMAP.md
cmake/: check_architecture.cmake
docs/development/: baseline.md
firmware/stm32f401/app/: app_main.c  app_main.h  link_composition.c  link_composition.h  node_config.h
firmware/stm32f401/board/: blackpill_f401cc_sx128x.c  blackpill_f401cc_sx128x.h  board_validation.c  board_validation.h
firmware/stm32f401/cubeide/: .cproject  .mxproject  .project  stm32f401.ioc
firmware/stm32f401/cubeide/Core/Inc/: main.h  stm32f4xx_it.h
firmware/stm32f401/cubeide/Core/Src/: gpio.c  main.c  spi.c  stm32f4xx_it.c  usart.c
firmware/stm32f407/: HARDWARE_VALIDATION.md  README.md
firmware/stm32f407/app/: app_main.c  app_main.h  radio_composition.c  radio_composition.h  radio_control_profile.c  radio_control_profile.h
firmware/stm32f407/board/: board_validation.c  board_validation.h  fk407m3_vet6_v1_1_radio.c  fk407m3_vet6_v1_1_radio.h
firmware/stm32f407/cubeide/: .cproject  .mxproject  .project  stm32f407.ioc
firmware/stm32f407/cubeide/Core/Inc/: gpio.h
firmware/stm32f407/cubeide/Core/Src/: main.c  stm32f4xx_it.c  usart.c
firmware/stm32f407/cubeide/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_cortex.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_ll_bus.h  stm32f4xx_ll_cortex.h  stm32f4xx_ll_dma.h  stm32f4xx_ll_rcc.h
firmware/stm32f407/cubeide/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
firmware/stm32f407/cubeide/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_uart.c
src/: main.c
src/drivers/sx128x/: sx128x.c  sx128x.h  sx128x_commands.h  sx128x_port_if.h  sx128x_types.h
src/link/adapter/: sx128x_packet_radio.c  sx128x_packet_radio.h
src/link/common/: link_crc16.c  link_crc16.h  link_packet.c  link_packet.h
src/link/port/: packet_radio_if.h
src/link/service/: duplex_link_service.c  duplex_link_service.h
src/platform/freertos/: rc_receiver_task.c  rc_receiver_task.h
src/platform/pc/: pc_logger.c  pc_logger.h  pc_mock_transport.c  pc_mock_transport.h  pc_time.c  pc_time.h
src/platform/stm32/: stm32_logger.c  stm32_logger.h  stm32_time.c  stm32_time.h  stm32_uart_dma_transport.c  stm32_uart_dma_transport.h
src/platform/stm32/f4/: stm32f4_time_backend.c  stm32f4_time_backend.h  stm32f4_uart_dma_backend.c  stm32f4_uart_dma_backend.h  stm32f4_uart_logger_backend.c  stm32f4_uart_logger_backend.h  stm32f4_uart_tx_backend.c  stm32f4_uart_tx_backend.h
src/platform/stm32/f4/sx128x/: stm32f4_sx128x_port.c  stm32f4_sx128x_port.h
src/radio/common/: rc_types.h
src/radio/control/: rc_control_policy.c  rc_control_policy.h
src/radio/mapping/: rc_channel_mapper.c  rc_channel_mapper.h
src/radio/port/: radio_logger_if.h  radio_time_if.h  radio_transport_if.h  radio_tx_if.h
src/radio/protocol/: radio_protocol_if.h
src/radio/protocol/crsf/: crsf_crc.c  crsf_crc.h  crsf_protocol.c  crsf_protocol.h
src/radio/protocol/sbus/: sbus_protocol.c  sbus_protocol.h
src/radio/service/: rc_receiver_service.c  rc_receiver_service.h
src/radio/telemetry/crsf/: crsf_telemetry.c  crsf_telemetry.h  crsf_telemetry_service.c  crsf_telemetry_service.h
tests/: test_crsf.c  test_crsf_telemetry.c  test_crsf_telemetry_service.c  test_duplex_link_service.c  test_link_crc16.c  test_link_packet.c  test_packet_radio_if.c  test_protocol_uart_config.c  test_rc_channel_mapper.c  test_rc_control_policy.c  test_rc_receiver_task.c  test_rc_service_crsf.c  test_rc_service_sbus.c  test_rc_service_stm32_dma.c  test_sbus_protocol.c  test_stm32_adapters.c  test_stm32f401_link_composition.c  test_stm32f407_composition.c  test_stm32f4_backend.c  test_stm32f4_sx128x_port.c  test_stm32f4_uart_tx_backend.c  test_sx128x_driver.c  test_sx128x_packet_radio.c
tests/fakes/freertos/: FreeRTOS.h  fake_freertos.c  fake_freertos.h  queue.h  task.h
tests/stubs/: stm32f4xx_hal.h
tests/support/: fake_packet_radio.c  fake_packet_radio.h  fake_radio_tx.c  fake_radio_tx.h  fake_stm32f4_hal.c  fake_stm32f4_hal.h  fake_sx128x_port.c  fake_sx128x_port.h  fake_uart_dma_backend.c  fake_uart_dma_backend.h
